--- a/prs.cabal
+++ b/prs.cabal
@@ -2,7 +2,7 @@
 -- see http://haskell.org/cabal/users-guide/
 
 -- The name of the package.
-name:                prs
+name:                hs-prs
 
 -- The package version.  See the Haskell package versioning policy (PVP) 
 -- for standards guiding when and how versions should be incremented.
@@ -16,7 +16,7 @@ version:             0.1.0.0
 synopsis:            A daemon that guards your Github repositories
 
 -- A longer description of the package.
-description:         prs let's you subscribe to Github repos' webhooks and let's you act upon those events
+description:         hs-prs let's you subscribe to Github repos' webhooks and let's you act upon those events
 
 -- The license under which the package is released.
 license:             Apache-2.0
@@ -46,7 +46,8 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 
-library
+
+executable hs-prs
   -- Modules exported by the library.
   -- exposed-modules:     
   
@@ -56,14 +57,19 @@ library
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
 
-  ghc-options: -02 -Wall -fwarn-tabs 
+  ghc-options: -Wall -fwarn-tabs 
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6 && <4.7,
+                       scotty >= 0.7.3,
+                       aeson > 0.7.0.5,
+                       text
   
   -- Directories containing source files.
-  -- hs-source-dirs:      
+  hs-source-dirs:        src
   
   -- Base language which the package is written in.
   default-language:    Haskell2010
+
+  main-is:        hs-prs.hs
   
