Add logging and environment variables retrieval

--- a/prs.cabal
+++ b/prs.cabal
@@ -65,7 +65,8 @@ executable hs-prs
                        aeson > 0.7.0.5,
                        text,
                        http-types >= 0.8.5,
-                       github >=  0.9
+                       github >=  0.9,
+                       wai-extra >= 0.4.6
   
   -- Directories containing source files.
   hs-source-dirs:        src
