--- a/prs.cabal
+++ b/prs.cabal
@@ -66,7 +66,8 @@ executable hs-prs
                        text,
                        http-types >= 0.8.5,
                        github >=  0.9,
-                       wai-extra >= 0.4.6
+                       wai-extra >= 0.4.6,
+                       containers >= 0.4
   
   -- Directories containing source files.
   hs-source-dirs:        src
