--- a/prs.cabal
+++ b/prs.cabal
@@ -68,7 +68,8 @@ executable hs-prs
                        github >=  0.9,
                        wai-extra >= 0.4.6,
                        containers >= 0.4,
-                       transformers > 0.3
+                       transformers > 0.3,
+                       safe >= 0.3.8
   
   -- Directories containing source files.
   hs-source-dirs:        src
