--- a/prs.cabal
+++ b/prs.cabal
@@ -69,7 +69,9 @@ executable hs-prs
                        wai-extra >= 0.4.6,
                        containers >= 0.4,
                        transformers > 0.3,
-                       safe >= 0.3.8
+                       safe >= 0.3.8,
+                       time == 1.4.0.1,
+                       old-locale == 1.0.0.5
   
   -- Directories containing source files.
   hs-source-dirs:        src
