Update cabal's version dependency

--- a/prs.cabal
+++ b/prs.cabal
@@ -43,7 +43,7 @@ build-type:          Simple
 -- extra-source-files:  
 
 -- Constraint on the version of Cabal needed to build this package.
-cabal-version:       >=1.10
+cabal-version:       >=1.20
 
 
 
@@ -60,18 +60,20 @@ executable hs-prs
   ghc-options: -Wall -fwarn-tabs 
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.6 && <4.7,
+  build-depends:       base >=4.7 && <4.8,
                        scotty >= 0.7.3,
                        aeson > 0.7.0.5,
-                       text,
-                       http-types >= 0.8.5,
-                       github >=  0.9,
+                       text >= 1.1,
+                       http-types >= 0.8,
+                       github >=  0.11.1,
                        wai-extra >= 0.4.6,
-                       containers >= 0.4,
+                       containers >= 0.5,
                        transformers > 0.3,
                        safe >= 0.3.8,
-                       time == 1.4.0.1,
-                       old-locale == 1.0.0.5
+                       time >= 1.4.0.1,
+                       old-locale >= 1.0.0.5,
+                       youtrack >= 0.1
+                       
   
   -- Directories containing source files.
   hs-source-dirs:        src
