Start adding the helper functions that determine if a ref name is attached to a ticketing system, thus being able to categorize those pull requests

--- a/prs.cabal
+++ b/prs.cabal
@@ -52,7 +52,8 @@ executable hs-prs
   -- exposed-modules:     
   
   -- Modules included in this library but not exported.
-  other-modules: PullRequest.Utils
+  other-modules: PullRequest.Utils,
+                 TicketingSystem.Utils
   
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
