--- a/prs.cabal
+++ b/prs.cabal
@@ -73,7 +73,7 @@ executable hs-prs
                        safe >= 0.3.8,
                        time >= 1.4.0.1,
                        old-locale >= 1.0.0.5,
-                       youtrack >= 0.1
+                       youtrack
                        
   
   -- Directories containing source files.
